# craiglist-poster

./: .env.example  .env.hosts  .env.prod.example  .gitignore  MANUAL_SETUP.md  Makefile  README.md  docker-compose.prod.yml  pyproject.toml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: auth.py  cli.py  config.py  db.py  main.py  security.py
backend/app/routers/: accounts.py  auth.py  dashboard.py  events.py  posts.py
backend/app/schemas/: events.py
backend/app/services/: ingest.py  queries.py
data/: 20260626_ads_100_rows.xlsx  20260630_ads_100_rows.xlsx  20260701_ads.xlsx  ads.xlsx  stats_health.json
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/lib/: api.ts  auth.tsx  format.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  PostDetailPage.tsx  PostsPage.tsx
logs/: state.json
scripts/: deploy.sh  install-photo-inventory-schedule.ps1  install-reporter-daemon.ps1  install-schedule.ps1  install-stats-schedule.ps1  sync_schemas.py  uninstall-schedule.ps1
src/craigslist_auto/: accounts.py  backfill.py  cli.py  config.py  content.py  covers.py  events.py  ghost_check.py  human.py  poster.py  reporter.py  stats.py
