[project]
name = "craigslist-auto"
version = "0.1.0"
description = "Anti-detect Craigslist roofing ad poster"
requires-python = ">=3.11"
dependencies = [
    "patchright>=1.49.0",
    "openpyxl>=3.1.5",
    "loguru>=0.7.2",
    "python-dateutil>=2.9.0",
    "typer>=0.12.5",
    "httpx>=0.27.2",
    "python-dotenv>=1.0.1",
    "tzdata>=2024.1 ; sys_platform == 'win32'",
]

[project.scripts]
cl = "craigslist_auto.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/craigslist_auto"]
