[project]
name = "craigslist-backend"
version = "0.1.0"
description = "FastAPI backend for the Craigslist automation dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    "psycopg[binary,pool]>=3.2.0",
    "argon2-cffi>=23.1.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.12",
    "slowapi>=0.1.9",
    "alembic>=1.14.0",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
]

[project.scripts]
hash-password = "app.cli:hash_password"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
